--- a/Portfolio_self-intro/index.html
+++ b/Portfolio_self-intro/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>福田のポートフォリオ</title>
+    <title>ポートフォリオ</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://bootswatch.com/3/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
@@ -93,8 +93,8 @@
             <div class="row text-center">
                 <div class="col-sm-12">
                     <div class="jumbotron">
-                        <h1 id="Profile">Fukuda Kyotaro</h1>
-                            <p>2004年 2月 23日生まれ 20歳</p>
+                        <h1 id="Profile">だいふく</h1>
+                            <p>2004年 2月生まれ 20歳</p>
                             <p>千葉工業大学 先進工学部 知能メディア工学科 在籍</p>
                             <p>知的情報工学研究室所属</p>
                             <p>知識工学・メディア工学・デザインを学習</p>
@@ -365,6 +365,7 @@
                         <li>HTML</li>
                         <li>Kotlin</li>
                         <li>Solidity</li>
+                        <li>SQL</li>
                         <li>Autodesk Fusion 360</li>
                         <li>Adobe Illustrator</li>
                         <li>Adobe Photoshop</li>
